2011-09-14  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/fpu/s_copysign.S [ELF]: Use correct section.

	* sysdeps/x86_64/fpu/bits/mathinline.h (__MATH_INLINE): Use
	__extern_always_inline.
	Define lrint{f,} and llrint{f,} for 64-bit and in some situations for
	32-bit.

2011-09-14  Andreas Schwab  <schwab@redhat.com>

	* elf/rtld.c (dl_main): Also relocate in dependency order when
	doing symbol dependency testing.

2011-09-13  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_rela):
	Always define `refsym'.

2011-09-13  Andreas Schwab  <schwab@redhat.com>

	* misc/sys/select.h (__FD_MASK): Renamed from __FDMASK.
	(__FD_ELT): Renamed from __FDELT.
	* misc/bits/select2.h (__FD_ELT): Likewise.
	* bits/select.h (__FD_SET, __FD_CLR, __FD_ISSET): Use __FD_ELT,
	__FD_MASK instead of __FDELT, __FDMASK.
	* sysdeps/i386/bits/select.h (__FD_SET, __FD_CLR, __FD_ISSET):
	Likewise.
	* sysdeps/x86_64/bits/select.h (__FD_SET, __FD_CLR, __FD_ISSET):
	Likewise.

	* elf/Makefile (gen-ldd): Fix pattern.

	* elf/rtld.c (dl_main): Only use USE___THREAD when defined.
	(init_tls): Likewise.

2011-09-12  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/s_logb.c: New file.

2011-09-12  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h (__cmsg_nxthdr): Cast to
	`struct cmsghdr *' instead of `void *'.
	* sysdeps/unix/sysv/linux/sparc/bits/socket.h (__cmsg_nxthdr):
	Likewise.

2011-09-11  Andreas Schwab  <schwab@linux-m68k.org>

	* elf/Makefile (gen-ldd): Prepend $(..) to $(ldd-rewrite-script)
	if non-absolute.
	* sysdeps/unix/sysv/linux/configure.in: Remove leading ../ from
	ldd_rewrite_script.

2011-09-11  Ulrich Drepper  <drepper@gmail.com>

	* configure.in: Remove --with-tls option.
	* config.h.in: Remove HAVE_TLS_SUPPORT entry.
	* sysdeps/i386/elf/configure.in: Always test for TLS support and err
	out in case it is missing.
	* sysdeps/ia64/elf/configure.in: Likewise.