@@ -1,3 +1,8 @@
+2011-09-15  Ulrich Drepper  <drepper@gmail.com>
+
+	* sysdeps/x86_64/fpu/bits/mathinline.h: Add fmax and fmin optimizations
+	for __FINITE_MATH_ONLY__ == 1.
+
 2011-09-14  Ulrich Drepper  <drepper@gmail.com>
 
 	* sysdeps/x86_64/fpu/s_copysign.S [ELF]: Use correct section.
